--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('F:/Users/S/Desktop/libss/Android_Location_V1.3.2.jar')
-    compile files('F:/Users/S/Desktop/libss/asmack-android-8-4.0.0.jar')
-    compile files('F:/Users/S/Desktop/libss/dnsjava-2.1.3.jar')
-    compile files('F:/Users/S/Desktop/libss/asmack-android-8-0.8.10.jar')
-    compile files('F:/Users/S/Desktop/libss/mina-core-2.0.9.jar')
-    compile files('F:/Users/S/Desktop/libss/slf4j-api-1.5.8.jar')
-    compile files('F:/Users/S/Desktop/libss/slf4j-log4j12-1.5.8.jar')
-    compile files('F:/Users/S/Desktop/libss/log4j-1.2.12.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/Android_Location_V1.3.2.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/asmack-android-8-4.0.0.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/dnsjava-2.1.3.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/asmack-android-8-0.8.10.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/mina-core-2.0.9.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/slf4j-api-1.5.8.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/slf4j-log4j12-1.5.8.jar')
+    compile files('D:/git/androidpn-client-0.5.02/libs/log4j-1.2.12.jar')
 }
