--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 18 09:59:29 CST 2015
-sdk.dir=C\:\\Program Files\\Android\\sdk
+#Tue Aug 18 10:55:27 CST 2015
+sdk.dir=D\:\\soft_download\\android-studio\\android-studio\\android-sdk-windows
