--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,18 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 
-		<activity android:name=".DemoAppActivity" android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<!--<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">-->
+		<!--<activity android:name=".DemoAppActivity" android:label="@string/app_name">-->
 			<!--<intent-filter>-->
 				<!--<action android:name="android.intent.action.MAIN" />-->
 				<!--<category android:name="android.intent.category.LAUNCHER" />-->
 			<!--</intent-filter>-->
 		<!--</activity>-->
+		<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		<activity android:name="org.androidpn.client.NotificationDetailsActivity"
 			android:label="Notification Details">
 		</activity>
@@ -25,8 +25,7 @@
 		<activity android:name="org.androidpn.client.NotificationSettingsActivity"
 			android:label="Notification Settings">
 		</activity>
-		<activity android:name=".ScreenLockActivity" android:windowSoftInputMode="adjustUnspecified|stateHidden" />
-		<activity android:name=".myActivity" android:label="@string/app_name" android:launchMode="singleTask">
+		<activity android:name=".ScreenLockActivity" android:label="@string/app_name" android:launchMode="singleTask">
 			<intent-filter>
 				<action android:name="com.TEST" />
 				<category android:name="android.intent.category.DEFAULT"/>
@@ -39,19 +38,25 @@
 				<action android:name="org.androidpn.client.NotificationService" />
 			</intent-filter>
 		</service>
-		<receiver android:name="org.androidpn.mydevice.MyAdminReceiver" >
+		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.MyAdminReceiver" >
 			<meta-data
 				android:name="android.app.device_admin"
 				android:resource="@xml/my_admin" />
-
 			<intent-filter>
 				<action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
 			</intent-filter>
 		</receiver>
-		<!--
-			<meta-data android:name="ANDROIDPN_API_KEY"
+		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.BootReceiver"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.PACKAGE_ADDED" />
+				<action android:name="android.intent.action.PACKAGE_REMOVED" />
+				<data android:scheme="package" />
+			</intent-filter>
+		</receiver>
+
+		<meta-data android:name="ANDROIDPN_API_KEY"
 			android:value="1234567890" />
-		-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="a2163fb3b233523add014bbe130a4a1b" />
@@ -68,7 +73,6 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
 
