--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,18 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 
-		<!--<activity android:name=".DemoAppActivity" android:label="@string/app_name">-->
-			<!--<intent-filter>-->
-				<!--<action android:name="android.intent.action.MAIN" />-->
-				<!--<category android:name="android.intent.category.LAUNCHER" />-->
-			<!--</intent-filter>-->
-		<!--</activity>-->
-		<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">
+		<activity android:name=".DemoAppActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<!--<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">-->
+			<!--<intent-filter>-->
+				<!--<action android:name="android.intent.action.MAIN" />-->
+				<!--<category android:name="android.intent.category.LAUNCHER" />-->
+			<!--</intent-filter>-->
+		<!--</activity>-->
 		<activity android:name="org.androidpn.client.NotificationDetailsActivity"
 			android:label="Notification Details">
 		</activity>
@@ -72,6 +72,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
