--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "org.androidpn.demoapp"
+        applicationId "com.zs.devicemanager"
         minSdkVersion 15
         targetSdkVersion 20
     }
