--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.zs.devicemanager"
 	android:versionCode="20101028"
-	android:versionName="0.5.0">
+	android:versionName="0. .0">
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<application android:icon="@drawable/screen" android:label="@string/app_name">
+	<application android:icon="@drawable/pander" android:label="@string/app_name">
 
-		<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name">
+		<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.intent.action.devicemanager" />
+				<action android:name="android.intent.action.DEFAULT" />
+				<!--<action android:name="android.intent.action.MAIN" />-->
+				<category android:name="android.intent.category.DEFAULT" />
+				<!--<category android:name="android.intent.category.LAUNCHER" />-->
 			</intent-filter>
 		</activity>
 		<!--<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">-->
@@ -46,6 +50,19 @@
 			<intent-filter>
 				<action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
 			</intent-filter>
+		</receiver>
+		<receiver android:enabled="true" android:name="org.androidpn.mydevice.DeviceReceiver.ReBootReceiver"
+
+			android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+
+			<intent-filter>
+
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+
+			</intent-filter>
+
 		</receiver>
 		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.BootReceiver"
 			android:label="@string/app_name">
@@ -87,6 +104,9 @@
 	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+	<uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
 
 
 </manifest> 
