--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
 	<application android:icon="@drawable/pander" android:label="@string/app_name">
 
 		<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.Translucent.NoTitleBar">
+			>
 			<intent-filter>
 				<action android:name="android.intent.action.devicemanager" />
-				<action android:name="android.intent.action.DEFAULT" />
-				<!--<action android:name="android.intent.action.MAIN" />-->
-				<category android:name="android.intent.category.DEFAULT" />
-				<!--<category android:name="android.intent.category.LAUNCHER" />-->
+				<!--<action android:name="android.intent.action.DEFAULT" />-->
+				<action android:name="android.intent.action.MAIN" />
+				<!--<category android:name="android.intent.category.DEFAULT" />-->
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<!--<activity android:name="org.androidpn.mydevice.MainActivity" android:label="@string/app_name">-->
@@ -39,8 +39,16 @@
 		<service android:enabled="true"
 			android:name="org.androidpn.client.NotificationService"
 			android:label="NotificationService">
-			<intent-filter>
+			<intent-filter android:priority="1000">
 				<action android:name="org.androidpn.client.NotificationService" />
+			</intent-filter>
+		</service>
+
+		<service
+			android:name="org.androidpn.client.ClientService"
+			android:enabled="true" >
+			<intent-filter android:priority="1000" >
+				<action android:name="com.dbjtech.myservice" />
 			</intent-filter>
 		</service>
 		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.MyAdminReceiver" >
@@ -104,9 +112,10 @@
 	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 	<uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
 
 
 </manifest> 
