--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.zs.devicemanager"
-	android:versionCode="20101028"
+	android:versionCode="1314520"
 	android:versionName="0. .0">
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<application android:icon="@drawable/pander" android:label="@string/app_name">
+	<application android:icon="@drawable/pander" android:label="@string/app_name" 	android:persistent="true">
 
 		<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"
+			android:process=":process.main"
 			android:theme="@android:style/Theme.Translucent.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.devicemanager" />
@@ -24,13 +25,20 @@
 			<!--</intent-filter>-->
 		<!--</activity>-->
 		<activity android:name="org.androidpn.client.NotificationDetailsActivity"
-			android:label="Notification Details">
+			android:launchMode="singleInstance" android:process=":process.sub"
+			>
+			<intent-filter>
+				<action android:name="shy.luo.task.notifyactivity"/>
+				<category android:name="android.intent.category.DEFAULT"/>
+			</intent-filter>
+
 		</activity>
 
 		<activity android:name="org.androidpn.client.NotificationSettingsActivity"
 			android:label="Notification Settings">
 		</activity>
-		<activity android:name="org.androidpn.demoapp.ScreenLockActivity" android:label="@string/app_name" android:launchMode="singleTask">
+		<activity android:name="org.androidpn.demoapp.ScreenLockActivity" android:label="@string/app_name"
+			android:launchMode="singleTask" android:process=":shy.luo.process.screen">
 			<intent-filter>
 				<action android:name="com.TEST" />
 				<category android:name="android.intent.category.DEFAULT"/>
@@ -38,6 +46,7 @@
 		</activity>
 		<service android:enabled="true"
 			android:name="org.androidpn.client.NotificationService"
+			android:process=":service2"
 			android:label="NotificationService">
 			<intent-filter android:priority="1000">
 				<action android:name="org.androidpn.client.NotificationService" />
@@ -46,11 +55,13 @@
 
 		<service
 			android:name="org.androidpn.client.ClientService"
-			android:enabled="true" >
+			android:enabled="true"
+			android:process=":service1">
 			<intent-filter android:priority="1000" >
 				<action android:name="com.dbjtech.myservice" />
 			</intent-filter>
 		</service>
+
 		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.MyAdminReceiver" >
 			<meta-data
 				android:name="android.app.device_admin"
@@ -115,6 +126,7 @@
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 	<uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+	<uses-permission android:name="android.permission.RESTART_PACKAGES"/>
 
 
 </manifest> 
