--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<application android:icon="@drawable/pander" android:label="@string/app_name" 	android:persistent="true">
-
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 		<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"
 			android:process=":process.main"
 			android:theme="@android:style/Theme.Translucent.NoTitleBar">
