--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 			</intent-filter>
 		</service>
 
-		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.MyAdminReceiver" >
+		<receiver android:name="org.androidpn.mydevice.receiver.MyAdminReceiver" >
 			<meta-data
 				android:name="android.app.device_admin"
 				android:resource="@xml/my_admin" />
@@ -67,7 +67,7 @@
 				<action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
 			</intent-filter>
 		</receiver>
-		<receiver android:enabled="true" android:name="org.androidpn.mydevice.DeviceReceiver.ReBootReceiver"
+		<receiver android:enabled="true" android:name="org.androidpn.mydevice.receiver.ReBootReceiver"
 
 			android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
 
@@ -80,7 +80,7 @@
 			</intent-filter>
 
 		</receiver>
-		<receiver android:name="org.androidpn.mydevice.DeviceReceiver.BootReceiver"
+		<receiver android:name="org.androidpn.mydevice.receiver.BootReceiver"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.PACKAGE_ADDED" />
