--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 	android:versionName="0. .0">
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
 	<application android:icon="@drawable/pander" android:label="@string/app_name" 	android:persistent="true">
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 		<!--<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"-->
@@ -124,6 +126,5 @@
 	<uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="android.permission.RESTART_PACKAGES"/>
-
 
 </manifest> 
