--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
 	<application android:icon="@drawable/pander" android:label="@string/app_name" 	android:persistent="true">
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 		<!--<activity android:name="org.androidpn.demoapp.DemoAppActivity" android:label="@string/app_name"-->
 			<!--android:process=":process.main"-->
 			<!--android:theme="@android:style/Theme.Translucent.NoTitleBar">-->
@@ -20,7 +19,8 @@
 				<!--&lt;!&ndash;<category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
 			<!--</intent-filter>-->
 		<!--</activity>-->
-		<activity android:name=".view.TestActivity" android:label="@string/app_name">
+		<activity android:name=".view.TestActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.Wallpaper.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
